# crypto-bot

./: .gitignore  README.md  constants.py  pyproject.toml  pytest.ini
clients/: __init__.py  binance.py  s3.py
clients/exchange/: __init__.py  abstract.py  binance.py
clients/news/: __init__.py  abstract.py  mediastack.py
notebooks/: 1-load-data.ipynb  2-train-transformer.ipynb  3-news-data.ipynb  4-generate-features.ipynb  4-training-model.ipynb  5-backtest-model.ipynb  6-training-data-eda.ipynb  DataLoaders.ipynb  S3.ipynb  Untitled.ipynb  load-data.ipynb
src/dataloaders/: __init__.py  abstract.py  abstract_dataloader.py  binance.py  candlestick.py  candlestick_dataloader.py  news_dataloader.py
src/dataloaders/exchange/: __init__.py  binance.py
src/dataloaders/news/: __init__.py  mediastack.py
src/evaluation/: __init__.py  backtester.py  metrics.py
src/evaluation/metrics/: __init__.py  binary.py  three_labels.py
src/features/: feature_service.py
src/features/feature_generators/: abstract.py
src/labelers/: __init__.py  abstract.py  binary_labeler.py  binary_smooth_labeler.py  three_bar_labeler.py
src/model/architectures/: __init__.py  lstm_binary.py  transformer_binary.py
src/model/datasets/: __init__.py  sliding_window.py
src/model/estimator_toolkits/: __init__.py  base.py  v001_binary.py
src/model/preprocessors/: __init__.py  abstract.py  normalizer.py  scaler.py
src/model/wrappers/: __init__.py  abstract.py  binary_classification.py  v001_binary.py
tests/unit/dataloaders/: test_binance_dataloader.py  test_candlestick_dataloader.py
(+36 files in other folders)
